feat: cursor follow + video game tag

--- a/html/contact.html
+++ b/html/contact.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
     <div class="mail-div" id="mail-cursor">
       <p id="text-to-copy">alvinadr24@gmail.com</p>
     </div>
