--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
     <div class="mail-div" id="text-cursor">
       <p id="text-to-copy">Have a look•Have a look•</p>
     </div>
