--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -40,7 +41,7 @@
     </section>
 
     <section id="blog-section" class="div-row">
-      <div class="div-column" style="width: 70%">
+      <div class="div-column">
         <p>
           <b>2022</b> <b>Musée des Beaux Arts</b> <b>Online mobile first</b>
           <b>Phaser 3</b>
@@ -84,7 +85,7 @@
         </div>
       </div>
 
-      <div class="div-column" style="width: 30%; margin-left: 50px">
+      <div class="div-column">
         <div
           class="project-window2"
           href="./html/index/jeu_video.html"
