--- a/html/projects/video-games/diver-down.html
+++ b/html/projects/video-games/diver-down.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
@@ -40,7 +41,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>2023</b> <b>Unity</b> <b>Zenject</b> <b>HDRP</b></p>
             <p>Diver Down is the result of my third EMMI Jam (a jam that we organise between MMI and the ENSEIRB which is an engineer school in Bordeaux). We had a team of five and were two devs, which allowed me to focus on the graphic side of the game.</p>
             <p>The initial game was already looking pretty good for a 48 hours jam and it caught the eye of the jury (composed from video game developers from Asobo, Ubisoft, Shiro Games and more). We ranked first place and won pretty <a class="link-in-text" href="https://store.steampowered.com/app/1182900/A_Plague_Tale_Requiem/" target="_blank">A Plague Tale : Requiem</a> artbooks.</p>
@@ -52,7 +53,7 @@
             <p>It's one of the games I'm the most proud to show people and to this day I'm still adding bits here and there to make it better.</p>
         </div>
         
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
