--- a/html/projects/video-games/dynasty.html
+++ b/html/projects/video-games/dynasty.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -39,7 +40,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>#Unity</b> <b>#DOTween</b> <b>#Oculus Quest 2</b></p>
             <p>EBA effect is a VR game inspired by Elite Beat Agents. We had five weeks spreaded from October to November 2022 to create it. Our team of four was well equilibrated and we had a level/game designer, a sound/music designer, a 3D artist and myself who worked on the programming side of the game.</p>
             <p>EBA Effect is a first person shooter where you need to put down targets in rhythm with the music, a bit like Elite Beat Agents but in 3D. I learned a lot making this game, and we faced multiple challenges.</p>
@@ -58,7 +59,7 @@
             <p>We didn't have a lot of time so a lot of the environment was badly organised, prefab multiplied, objects invisible but still there, it wasn't pretty. Cleaning up this mess was the first step. Then I started to look into the clouds that I had done weeks earlier with the Unity particle system. Reducing the number of particles and making them bigger instead, making the particles life time longer and looping, pausing them when out of the player's view (culling). Quickly enough we got to a pretty good fps.</p>
         </div>
         
-        <div class="div-column" style="width: 30%; margin-left : 10px;">          
+        <div class="div-column">          
             <p>2022-23 | 2 months | School Project | Oculus Quest 2</p>
             <p>Tools : Unity, Blender, DOTween</p>
             <a class="btn1" href="https://atoxm.itch.io/dynasty" target="_blank">Discover the game</a>
