--- a/html/projects/video-games/eba-effect.html
+++ b/html/projects/video-games/eba-effect.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -40,7 +41,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>2022-23</b> <b>Oculus Quest 2</b> <b>Unity</b></p>
             <p>EBA Effects is a VR game inspired by <a class="link-in-text" href="https://fr.wikipedia.org/wiki/Elite_Beat_Agents" target="_blank">Elite Beat Agents</a>. We had five weeks spreaded from October to November 2022 to create it. Our team of four was composed of a level/game designer, a sound/music designer, a 3D artist and myself who worked on the programming side of the game.</p>
             <p>EBA Effects is a first person shooter where you need to put down targets in rhythm with the music, a bit like Elite Beat Agents but in 3D. I learned a lot making this game, and we faced multiple challenges.</p>
@@ -70,7 +71,7 @@
             </div>         
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
