--- a/html/projects/video-games/find-the-way-back.html
+++ b/html/projects/video-games/find-the-way-back.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -39,7 +40,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>2022</b> <b>Game jam</b> <b>Puzzle</b> <b>Unity</b></p>
             <p>This game was made in a week-end, followed by two long weeks of debug. A friend of mine had the idea to make our own game jam at home and we made the whole thing in the apartment I had at the time in Bordeaux. It was a beautiful experience, we had fun, sore backs and were giddy with Monster by the end of the first night. I remember trying to make the walking system work for fourteen hours ! At the time I didn't knew that you could use the grid to plan your movement and there was a big conflict between how physics work in Unity and how I had made it all. A good night of sleep later, it was done in one hour. Which I guess is one of the lessons that I got to experience time and time again since then : if you can't do it now, stop for today and try again tomorrow.</p>
             <p>The theme of the jam was "soédiv xuej" which would translate as "emag oediv" in english. Which is litteraly video game backward. So we had a lot of thinking about mirror and beginning and ending. Which left us with Find The Way Back.</p>
@@ -53,7 +54,7 @@
             <p>If you want to try the game it's available online on your browser or downloadable through the itch.io page just by clicking on the link on the right. Hope you enjoy !</p>
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
