--- a/html/projects/video-games/golden-pumpkin.html
+++ b/html/projects/video-games/golden-pumpkin.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -39,7 +40,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>2021</b> <b>Unity</b> <b>Android</b></p>
             <p>In October 2021, we had two weeks to realise a video game on the theme of Halloween. The first week, as we were building the foundations of our game, we learned the basics of UML modelisation (in our case, how to conceive class diagrams, transition state diagrams). This game was made on Unity. We were five per groups and I was mainly focusing on the C# development.</p>
             <p>Now imagine yourself on the evening of Halloween in a small town that every year organise a contest for the kid with the most sweets in the city (winner's price being a beautiful golden pumpkin). As the dignified heir of your grandmother, ten times winner in her youth, you need to be the best.</p>
@@ -51,7 +52,7 @@
             <p>This game is available on android, windows and mac if you want to try it !</p>
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
