--- a/html/projects/video-games/hfc.html
+++ b/html/projects/video-games/hfc.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -38,7 +39,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column" style="width: 70%;">
+            <div class="div-column">
                 <p><b>#Walking Simulator</b> <b>#Narrative Design</b></p>
                 <p>The final project of our vocational degree at MIAMI was to make a walking simulator in Unreal Engine. We had two months to familiarize ourselves with the software, think through the story, level design and the message we wanted to convey. This was the occasion to work in larger groups than usual (six people) and to learn a lot more about team work and management.</p>
                 <p>Inspired by <a>Life Is Strange</a>, <a>What Remains of Edith Finch</a> and <a>Doki Doki Literature Club</a>, our game talks about privacy on the Internet and cybersecurity (under the guise of a Christmas ).</p>
@@ -51,7 +52,7 @@
                 <iframe width="100%" height="450" src="https://www.youtube.com/embed/ETVf-kdi2EM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe width="100%" height="450" src="https://www.youtube.com/embed/ZHoMSfKOjQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
-            <div class="div-column" style="width: 30%; margin-left : 10px;">
+            <div class="div-column">
                 <p>Unreal Engine 5, Blender</p>
                 <a class="btn1" href="https://alvina-dr.itch.io/hall-familys-christmas" target="_blank">Discover the game</a>
 
