--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -39,7 +40,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column" style="width: 70%;">
+            <div class="div-column">
                 <p><b>Web</b> <b>Online</b> <b>React</b></p>
                 <p>In November 2021, we had a React workshop during my DHE. As I already had learned a bit of JS thanks to freeCodeCamp, I decided to realise a pokemon memory with my partner.</p>
                 <div class="div-row" style="width: 100%;">
@@ -50,7 +51,7 @@
                 <p>I am really proud of this funny game and consider this workshop a success.</p>
             </div>
 
-            <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="div-column">
                 <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                     <div class="project-window-navbar">
                         <p class="project-window-title" id="project-id">PLAY</p>
