--- a/html/projects/video-games/qatp.html
+++ b/html/projects/video-games/qatp.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -40,7 +41,7 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>2023</b> <b>Laval Virtual</b> <b>Hackathon</b> <b>Virtual Reality</b> <b>XR Interaction Toolkit</b></p>
             <p>In april 2023, I had the chance to take part in the Laval Virtual, a huge virtual/augmented reality event in Europe. Encouraged by our teachers back in Tarbes, we participated to the student limited time competition (fancy name for hackathon). We were against ten other teams from schools all around the world and had to conceive a whole experience / game / application in 30 hours on the theme of "Collaborative XR for industry". A secondary theme per team was also assigned and ours was "Traceabilty".</p>
             <p>Those was born Quality Assurance Test Protocol. Heavily inspired by <a class="link-in-text" href="https://keeptalkinggame.com/" target="_blank">Keep Talking and Nobody Explodes</a>, QATP is an asymetric video game where two players try to collaborate and decipher wheter or not a prosthesis is authentic and functional. One of the player is inside the virtual reality headset and can inspect the prosthesis and the other has access to a manual (paper or pdf version) with multiple informations on how to trace back the product's origins.</p>
@@ -62,7 +63,7 @@
             <p>A final word to say a huge thank you to all the people that helped us get there. First and foremost our teachers from Tarbes, who fought hard for us to be able to participate and without whom, all this adventure would have never existed. Then thanks to TavroxGames for letting me go in such a strainous period, we had a game scheduled for release just a few weeks later but they were very understanding. Thanks to the team of Laval Virtual for their fantastic job with the event. And finally, thanks to all my fellow classmates, those who were with me at the Laval Virtual and those who couldn't but still helped from the distance.</p>
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
