--- a/html/projects/video-games/rolling-food-chain.html
+++ b/html/projects/video-games/rolling-food-chain.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -38,7 +39,7 @@
     </section>
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>GMTK</b></p>
             <p>At the end of 2023, I had the chance to participate in the <a class="link-in-text" href="https://www.ubisoft.com/en-us/company/careers/interns-graduates/develop-at-ubisoft" target="_blank">Develop At Ubisoft Program</a>.</p>
             <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window. This was a solo project done in a few months, only working in the evening and the weekend (all sounds and music are done by Mael Heurard though, big thanks to him).</p>
@@ -53,7 +54,7 @@
             </div> 
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
