--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -39,8 +40,8 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
-            <p><b>2022</b> <b>Map editor</b> <b>Tool development</b> <b>GoblinzStudio</b> <b>Unity</b></p>
+        <div class="div-column">
+            <p><b>2022</b> <b>Unity</b> <b>Map editor</b> <b>Tool development</b> <b>GoblinzStudio</b></p>
             <p>During my internship at TavroxGames I had the occasion to work for a month and a half with GoblinzStudio on the game Sandwalkers. I first created a map editor which would help level designer to build complex levels easily and directly from the game.</p>
             <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor2.gif" style="width: 100%;">
             <p>The map editor allowed the user to create a map with the dimensions they prefered, showing or not the mountains that appear on the sides of the world in game. You could load and save your work, modify each cell's biome, generate the same environment for the whole map, put decorations, places, ennemies, point of interest... This tool made it possible to make a whole map without having to go through Unity's interface.</p>
@@ -53,7 +54,7 @@
             <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final experience with my own eyes !</p>
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
