--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -42,7 +43,7 @@
     <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-      <div class="div-column" style="width: 70%">
+      <div class="div-column">
         <p><b>2022</b> <b>Game Jam</b> <b>Unity</b></p>
         <p>
           The second game jam we made in collaboration with ENSEIRB was at the
@@ -99,7 +100,7 @@
         </div>
       </div>
 
-      <div class="div-column" style="width: 30%; margin-left: 50px">
+      <div class="div-column">
         <div
           class="project-window2"
           href="./html/index/jeu_video.html"
