--- a/html/projects/video-games/those-who-remain.html
+++ b/html/projects/video-games/those-who-remain.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -37,7 +38,7 @@
     </section>
 
     <section id="blog-section" class="div-row">
-        <div class="div-column"  style="width: 70%;">
+        <div class="div-column">
             <p><b>2021</b> <b>School project</b> <b>Unity</b></p>
             <p>This new game main objective was accessibility. It needed to be playable without sight or/and without hearing. The controls also had to be simple. With my team, we decided to make a Subway-surfer-like in 2D.</p>
             <p>It was the first time I programed a whole game by myself. I also took care of the level design and the integration of all elements in Unity. The other members of the team either looked for graphic assets online or designed their own to make the backgrounds (the road that goes by), the main character Miraï, the obstacles and the UI elements in the menu. Adrien Dumont did the whole sound design of the game, which was really important for visually impaired and nonsighted people.</p>                
@@ -54,7 +55,7 @@
             <img src="../../../img/video-games/those-who-remain/twr-gameplay.gif">
         </div>
         
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
