--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
     <div class="mail-div" id="text-cursor">
         <p id="text-to-copy">Have a look•Have a look•</p>
     </div>
