--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
