--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="cursor-follow"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
@@ -38,7 +39,7 @@
     </section>
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
+        <div class="div-column">
             <p><b>2022-23</b> <b>Unity</b> <b>Photon Unity Networking 2</b> <b>Socket.io</b> <b>Phaser 3</b></p>
             <p>In october 2022 I started making a chase tag game after work. I had wanted to learn about online multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny.</p>
             <p>But with other projects in the way during my vocationnal degree, the project got left behind. The idea never left though. In April 2023, after thinking about it for so long I decided to switch it directly to web instead of using Unity and then building to WebGL. The old solution was too long to test and there were huge delay between the testers.</p> 
@@ -49,7 +50,7 @@
                 <img src="../../../img/video-games/chase-tag/chase-tag-new.gif" style="width: 49%;">
             </div>
         </div>
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
+        <div class="div-column">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
