feat: tag for technical games

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../css/page-video-game.css" />
     <link rel="stylesheet" href="../../css/pointer.css" />
     <link rel="stylesheet" href="../../css/text.css" />
+    <link rel="stylesheet" href="../../css/scroll-text.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
